minor fix - spacing in fieldset

--- a/acp/theme/css/styles_dark.css
+++ b/acp/theme/css/styles_dark.css
@@ -13176,7 +13176,7 @@ textarea.form-control-lg {
 
 /* fieldset */
 fieldset {
-  padding: 30px 10px 10px 10px;
+  padding: 15px 10px 10px 10px;
   margin: 18px 0 25px 0;
   border: 1px solid rgba(5, 5, 5, 0.75);
   background: rgba(30, 30, 30, 0.75);
