--- a/acp/theme/css/styles_light.css
+++ b/acp/theme/css/styles_light.css
@@ -13176,7 +13176,7 @@ textarea.form-control-lg {
 
 /* fieldset */
 fieldset {
-  padding: 30px 10px 10px 10px;
+  padding: 15px 10px 10px 10px;
   margin: 18px 0 25px 0;
   border: 1px solid rgba(230, 230, 230, 0.45);
   background: rgba(255, 255, 255, 0.45);
