--- a/acp/theme/css/styles_light_mono.css
+++ b/acp/theme/css/styles_light_mono.css
@@ -12499,7 +12499,7 @@ textarea.form-control-lg {
 
 /* fieldset */
 fieldset {
-  padding: 30px 10px 10px 10px;
+  padding: 15px 10px 10px 10px;
   margin: 18px 0 25px 0;
   border: 1px solid #d5d5d5;
   background: #eee;
