--- a/acp/theme/src/form.scss
+++ b/acp/theme/src/form.scss
@@ -11,7 +11,7 @@
 
 
 fieldset {
-	padding: 30px 10px 10px 10px;
+	padding: 15px 10px 10px 10px;
 	margin: 18px 0 25px 0;
 	border: 1px solid darken($widget_background,10);
 	background: $widget_background;
